--- a/09-07-23/index.html
+++ b/09-07-23/index.html
@@ -7,7 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Aprendendo JavaScript</h1>
+    <h1 class="titulo">Estudando Flexbox</h1>
+    <main>
+        <ul class="container">
+            <li class="caixa-1">Caixa 1</li>
+            <li class="caixa-2">Caixa 2</li>
+            <li class="caixa-3">Caixa 3</li>
+        </ul>
+    </main>
     <script src="index.js"></script>
 </body>
 </html>
